--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="kalkulator">
         <div class="wynik">
             <div class="poprzednie-dzialanie"></div>
-            <div class="aktualne dzialanie"></div>
+            <div class="aktualne_dzialanie"></div>
         </div>
     <button class="wyczysc">AC</button>
     <button class="usun">DEL</button>
@@ -36,6 +36,8 @@
     <button class="liczba">0</button>
     <button class="rownosc">=</button>
 </div>
+
+<script src="index.js"></script>
 
 
     
