--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="kalkulator">
         <div class="wynik">
-            <div class="poprzednie-dzialanie"></div>
+            <div class="poprzednie_dzialanie"></div>
             <div class="aktualne_dzialanie"></div>
         </div>
     <button class="wyczysc">AC</button>
