--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <button class="liczba">9</button>
     <button class="operator">log</button>
     <button class="plus">+</button>   
-    <button class="operator">.</button>
+    <button class="liczba">.</button>
     <button class="liczba">0</button>
     <button class="rownosc">=</button>
 </div>
