--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <button class="liczba">8</button>
     <button class="liczba">9</button>
     <button class="operator">log</button>
-    <button class="plus">+</button>   
+    <button class="plus operator">+</button>   
     <button class="operator">.</button>
     <button class="liczba">0</button>
     <button class="rownosc">=</button>
