--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         </div>
     <button class="wyczysc">AC</button>
     <button class="usun">DEL</button>
-    <button class="operator">√</button>
+    <button class="special">√</button>
     <button class="operator">/</button>
     <button class="liczba">1</button>
     <button class="liczba">2</button>
     <button class="liczba">3</button>
-    <button class="operator">^</button>
+    <button class="special">^</button>
     <button class="operator">&times</button>
     <button class="liczba">4</button>
     <button class="liczba">5</button>
     <button class="liczba">6</button>
-    <button class="operator">%</button>
+    <button class="special">%</button>
     <button class="operator">-</button>   
     <button class="liczba">7</button>
     <button class="liczba">8</button>
     <button class="liczba">9</button>
-    <button class="operator">log</button>
+    <button class="special">log</button>
     <button class="operator plus">+</button>   
     <button class="liczba">.</button>
     <button class="liczba">0</button>
